# RustAoC2020

./: .gitignore  README.md
.github/workflows/: rust.yml  rustDay1.yml
day1/: Cargo.toml
day1/src/: main.rs
day1/src/lib/: mod.rs  report_utilities.rs
